@@ -25,9 +25,9 @@
 #if defined(_WIN32) 
     #define WIN32_LEAN_AND_MEAN
     #include <windows.h>
-#elif defined(__MACH__) || defined(__APPLE__)
+#elif defined(__APPLE__)
     #include <mach/mach_time.h>
-#elif defined(linux) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__) || defined(__FreeBSD_kernel__)
+#elif defined(linux) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__) || defined(__GLIBC__) || defined(__GNU__)
     #include <time.h>
 #elif defined(sun) || defined(__sun) || defined(_AIX)
     #include <sys/time.h>
@@ -49,7 +49,7 @@ namespace Rcpp{
         return 1.0e9 * time_var.QuadPart / frequency.QuadPart;
     }
 
-#elif defined(__MACH__) || defined(__APPLE__)
+#elif defined(__APPLE__)
      
     nanotime_t get_nanotime(void) {
         nanotime_t time;
@@ -62,7 +62,7 @@ namespace Rcpp{
         return time * (info.numer / info.denom);
     }
 
-#elif defined(linux) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__) || defined(__FreeBSD_kernel__)
+#elif defined(linux) || defined(__linux) || defined(__FreeBSD__) || defined(__NetBSD__) || defined(__OpenBSD__) || defined(__GLIBC__) || defined(__GNU__)
 
     static const nanotime_t nanoseconds_in_second = 1000000000LL;
     
