@@ -1,3 +1,8 @@
+2013-01-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/Timer.cpp (Rcpp): Applied refinement of previously applied
+	patch re *BSD builds, see http://bugs.debian.org/697032 for more
+
 2012-12-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Timer.cpp (Rcpp): Added defined() tests for more *BSD family
